<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.achiliveapp.auth.ui.reg.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".auth.ui.reg.RegistrationFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="@drawable/vertical_divider"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Регистрация"
                android:textSize="48sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/baseline_email_24"
                android:layout_height="wrap_content"
                app:editTextState="@{viewModel.emailUiState}"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/baseline_lock_24"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:editTextState="@{viewModel.passUiState}"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeatPass"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editTextState="@{viewModel.repeatPassUiState}"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock_24"
                android:hint="@string/repeatPass">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/regAndSignBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{!viewModel.authState.blocked}"
                android:text="Создать и войти" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="или" />

            <TextView
                android:id="@+id/backToSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{!viewModel.authState.blocked}"
                android:text="Войти"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#74000000"
            android:gravity="center"
            android:visibility="@{viewModel.authState.blocked}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>