<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.achiliveapp.main.achi.CategoryFragmentViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/frameLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.achi.CategoryFragment">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_bg"
                app:contentScrim="@color/black_bg"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax">


                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        app:error="@{@drawable/baseline_broken_image_24}"
                        app:imgUri="@{viewModel.categoryUiState.img}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:placeholder="@{@drawable/bg_placeholder}"
                        app:shapeAppearanceOverlay="@style/rounded_bottom_image"
                        tools:src="@tools:sample/avatars" />


                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="64dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/bg_placeholder"
                        android:backgroundTint="#181818"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@{viewModel.categoryUiState.name}"
                        android:textAllCaps="true"
                        android:textColor="#CACACA"
                        android:textSize="34sp"
                        app:layout_constraintEnd_toEndOf="@+id/view"
                        app:layout_constraintStart_toStartOf="@+id/view"
                        app:layout_constraintTop_toTopOf="@+id/view"
                        tools:text="@string/category" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@{viewModel.categoryUiState.about}"
                        android:textColor="#CACACA"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/view"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"
                        tools:text="@string/categoryAboutText" />

                    <com.example.achiliveapp.share.views.InfoCard
                        android:id="@+id/infoCard13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        app:_icon="@drawable/baseline_label_important_24"
                        app:_text="НАЧАТО"
                        app:_tittle="@{String.valueOf(viewModel.categoryUiState.started)}"
                        app:layout_constraintBottom_toBottomOf="@+id/view"
                        app:layout_constraintEnd_toStartOf="@+id/infoCard12"
                        app:layout_constraintStart_toStartOf="@+id/view"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <com.example.achiliveapp.share.views.InfoCard
                        android:id="@+id/infoCard12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:_icon="@drawable/outline_gpp_good_24"
                        app:_text="ЗАВЕРШЕНО"
                        app:_tittle="@{String.valueOf(viewModel.categoryUiState.ended)}"
                        app:layout_constraintBottom_toBottomOf="@+id/infoCard13"
                        app:layout_constraintEnd_toStartOf="@+id/infoCard14"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/infoCard13"
                        app:layout_constraintTop_toTopOf="@+id/infoCard13" />

                    <com.example.achiliveapp.share.views.InfoCard
                        android:id="@+id/infoCard14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:_icon="@drawable/achi_shild_ic"
                        app:_text="ВСЕГО"
                        app:_tittle="@{String.valueOf(viewModel.categoryUiState.count)}"
                        app:layout_constraintBottom_toBottomOf="@+id/infoCard12"
                        app:layout_constraintEnd_toEndOf="@+id/view"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/infoCard12"
                        app:layout_constraintTop_toTopOf="@+id/infoCard12">

                    </com.example.achiliveapp.share.views.InfoCard>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/transparent"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/back_ic_with_circle_background" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/search"
                app:startIconDrawable="@drawable/baseline_search_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black_bg" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/awardsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp"
            app:itemsList="@{viewModel.awardsListUiState}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/award_list_item" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>